# AlLabs

Lab1/: CMakeLists.txt  lab1.h  main.cpp
Lab2/: Array.h  CMakeLists.txt  main.cpp  tests.cpp
